<resources>
    <string name="app_name">IntroActivity</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or_sign_in_with">-Or sign in with -</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in"> Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm Password</string>
</resources>