<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_pare
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:layout_margin="20dp"
    android:paddingBottom="50dp"
    >
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_left_arrow_2"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_cigniti_logo_blue"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="@string/login_to_your_account"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_shadow"
        android:hint="@string/email"
        android:padding="15dp"
        android:layout_margin="10dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_shadow"
        android:hint="@string/password"
        android:padding="15dp"
        android:layout_margin="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_shadow"
        android:hint="@string/confirm_password"
        android:padding="15dp"
        android:layout_margin="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:background="@drawable/bg_button"
        android:layout_margin="15dp"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:text="@string/or_sign_in_with"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_google_symbol"
            android:background="@drawable/bg_shadow"
            android:padding="10dp"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_facebook"
            android:background="@drawable/bg_shadow"
            android:padding="10dp"
            android:layout_marginRight="10dp"
            />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_twitter"
            android:layout_weight="1"
            android:padding="10dp"
            android:background="@drawable/bg_shadow"
            />
    </LinearLayout>




</LinearLayout>